--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "next-trivia",
+  "name": "nextjs-trivia",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,7 +12,6 @@
     "@reduxjs/toolkit": "^1.5.0",
     "faker": "^5.4.0",
     "next": "10.0.9",
-    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2"
@@ -27,6 +25,8 @@
     "@types/faker": "^5.1.7",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "babel-loader": "^8.2.2",
     "prettier": "2.2.1",
     "typescript": "^4.2.3"
