--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "postcss": "^8.2.8",
     "prettier": "2.2.1",
+    "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3"
   },
   "prettier": {
