--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/react": "^6.1.21",
+    "@storybook/addon-actions": "^6.2.0-rc.6",
+    "@storybook/addon-essentials": "^6.2.0-rc.6",
+    "@storybook/addon-links": "^6.2.0-rc.6",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/react": "^6.2.0-rc.6",
     "@types/faker": "^5.1.7",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
