--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.9.0",
+    "@bit/jorgemoreira.react.input.text-field": "0.0.5",
     "@reduxjs/toolkit": "^1.5.0",
     "faker": "^5.4.0",
     "next": "10.0.9",
