--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.9.0",
-    "@bit/jorgemoreira.react.input.text-field": "0.0.5",
+    "@bit/jorgemoreira.react.input.text-field": "^0.0.3",
+    "@bit/jorgemoreira.react.progress.spinner": "^0.0.1",
+    "@bit/jorgemoreira.react.styles": "^0.0.1",
     "@reduxjs/toolkit": "^1.5.0",
     "faker": "^5.4.0",
     "next": "10.0.9",
