Add chromatic script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token c4e4ba6e8241"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.9.0",
