--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-  "name": "nextjs-trivia",
-  "version": "0.1.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token c4e4ba6e8241"
-  },
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.9.0",
-    "@bit/jorgemoreira.react.input.text-field": "^0.0.3",
-    "@bit/jorgemoreira.react.progress.spinner": "^0.0.1",
-    "@bit/jorgemoreira.react.styles": "^0.0.1",
-    "@reduxjs/toolkit": "^1.5.0",
-    "faker": "^5.4.0",
-    "next": "10.0.9",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-redux": "^7.2.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@storybook/addon-actions": "^6.2.0-rc.6",
-    "@storybook/addon-essentials": "^6.2.0-rc.6",
-    "@storybook/addon-links": "^6.2.0-rc.6",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/react": "^6.2.0-rc.6",
-    "@types/faker": "^5.1.7",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-redux": "^7.1.16",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "postcss": "^8.2.8",
-    "prettier": "2.2.1",
-    "tailwindcss": "^2.0.4",
-    "typescript": "^4.2.3"
-  },
-  "prettier": {
-    "tabWidth": 4
-  }
+    "name": "nextjs-trivia",
+    "version": "0.2.0",
+    "description": "A trivia app made with Next.js",
+    "author": "Jorge Moreira",
+    "license": "MIT",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook",
+        "chromatic": "npx chromatic --project-token c4e4ba6e8241"
+    },
+    "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.9.0",
+        "@bit/jorgemoreira.headless-react.input.text-field": "^0.0.2",
+        "@bit/jorgemoreira.headless-react.progress.spinner": "^0.0.1",
+        "@bit/jorgemoreira.headless.styles": "^0.0.6",
+        "@reduxjs/toolkit": "^1.5.0",
+        "faker": "^5.4.0",
+        "next": "10.0.9",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-redux": "^7.2.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.13.10",
+        "@storybook/addon-actions": "^6.2.0-rc.6",
+        "@storybook/addon-essentials": "^6.2.0-rc.6",
+        "@storybook/addon-links": "^6.2.0-rc.6",
+        "@storybook/addon-postcss": "^2.0.0",
+        "@storybook/react": "^6.2.0-rc.6",
+        "@types/faker": "^5.1.7",
+        "@types/node": "^14.14.35",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.2",
+        "@types/react-redux": "^7.1.16",
+        "autoprefixer": "^10.2.5",
+        "babel-loader": "^8.2.2",
+        "postcss": "^8.2.8",
+        "prettier": "2.2.1",
+        "tailwindcss": "^2.0.4",
+        "typescript": "^4.2.3"
+    },
+    "prettier": {
+        "tabWidth": 4
+    }
 }
